# robot_model

./: CMakeLists.txt  README.md  package.xml
rv4fl/: 00_BASE.stl  01_SHOLDER.stl  02_No1ARM.stl  03_ELBOW.stl  04_No2ARM.stl  05_WRIST.stl  06_FRANGE.stl  L0.rsdoc  L0.stl  L1.rsdoc  L1.stl  L2.rsdoc  L2.stl  L3.rsdoc  L3.stl  L4.rsdoc  L4.stl  RV_4FL_SH_model_forPublic.xacro
vs060/: test.launch  vs060.urdf
